tests/baselines/reference/privateNameHashCharName.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameHashCharName.ts(1,1): error TS1127: Invalid character.
tests/cases/conformance/classes/members/privateNames/privateNameHashCharName.ts(1,1): error TS2304: Cannot find name '#'.
tests/cases/conformance/classes/members/privateNames/privateNameHashCharName.ts(4,5): error TS1127: Invalid character.
tests/cases/conformance/classes/members/privateNames/privateNameHashCharName.ts(7,14): error TS1127: Invalid character.


==== tests/cases/conformance/classes/members/privateNames/privateNameHashCharName.ts (4 errors) ====
    #
    ~
!!! error TS1127: Invalid character.
    ~
!!! error TS2304: Cannot find name '#'.
    
    class C {
        #
        ~
!!! error TS1127: Invalid character.
    
        m() {
            this.#
                 ~
!!! error TS1127: Invalid character.
        }
    }
    